--- a/rtorrent.rc
+++ b/rtorrent.rc
@@ -57,7 +57,7 @@ ratio.upload.set=250M
 system.method.set = group.seeding.ratio.command, d.close=
 
 # Move files to ./unsorted when download completes
-system.method.set_key = event.download.finished,move_complete,"execute=mv,-n,$d.get_base_path=,./unsorted/;d.set_directory=./unsorted/"
+# system.method.set_key = event.download.finished,move_complete,"execute=mv,-n,$d.get_base_path=,./unsorted/;d.set_directory=./unsorted/"
 
 # Port range to use for listening.
 port_range = 33101-33199
